Stop making language name uppercased in the collapsable code shortcode.

--- a/source/css/code.css
+++ b/source/css/code.css
@@ -61,7 +61,6 @@
     background: var(--background);
     color: var(--color);
     border-radius: 10px;
-    text-transform: uppercase;
     padding: 3px 10px;
   }
 
